[package]
name = "gibbername"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.69"
futures-util = "0.3.26"
gibbercode = "0.1.0"
hex = "0.4.3"
melprot = { path = "../melprot" }
# melprot = { git = "https://github.com/mel-project/melprot" } # "0.13.3"
melstructs = "0.3.2"
stdcode = "0.1.14"
tmelcrypt = "0.2.6"

[dev-dependencies]
smolscale = "0.3.52"
melbootstrap = "0.8.3"