[package]
name = "gibbername"
version = "0.1.1"
edition = "2021"
license = "ISC"
repository = "https://github.com/mel-project/gibbername"
description = "minimal naming system on Mel"

[dependencies]
anyhow = "1.0.85"
futures-util = "0.3.30"
gibbercode = "0.1.0"
hex = "0.4.3"
log = "0.4.21"
melprot = { path = "../melprot" }
melstructs = "0.3.3"

[dev-dependencies]
smolscale = "0.4.4"
env_logger = "0.11.3"
